# fastapi-admin-project

./: Dockerfile  docker-compose.yml  pyproject.toml
fastapi_admin_project/: main.py  models.py  resources.py  routes.py
